fixed a bug where I had tried to app.get to the same url twice.

--- a/views/search.html
+++ b/views/search.html
@@ -33,7 +33,7 @@
         <!-- new todo form-->
         <form class="form-inline" id="create-todo">
           <div class="form-group">
-            <input type="text" name="search" class="form-control" placeholder="search" autofocus>
+            <input type="text" name="search" class="search" placeholder="search" autofocus>
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-default" value="search">
