--- a/views/search.html
+++ b/views/search.html
@@ -33,7 +33,18 @@
         <!-- new todo form-->
         <form class="form-inline" id="create-todo">
           <div class="form-group">
-            <input type="text" name="search" class="search" placeholder="search" autofocus>
+            <input type="text" name="task" class="form-control" placeholder="Task" autofocus>
+          </div>
+          <div class="form-group">
+            <input type="text" name="description" class="form-control" placeholder="Description">
+          </div>
+          <div class="form-group">
+            <input type="submit" class="btn btn-default" value="Add To Do">
+          </div>
+        </form>
+        <form class="form-inline" id="search-todo">
+          <div class="form-group">
+            <input type="text" name="q" placeholder="search" autofocus>
           </div>
           <div class="form-group">
             <input type="submit" class="btn btn-default" value="search">
@@ -49,8 +60,14 @@
             {{#each todos}}
               <li class="list-group-item todo" data-id="{{_id}}">
 
+                <!-- todo label (task) -->
+                <span class="label label-default">{{task}}</span>
+
                 <!-- todo label (search) -->
                 <span class="label label-default">{{search}}</span>
+                
+                <!-- todo description -->
+                {{description}}
 
                 <div class="pull-right">
                   <!-- pencil icon to toggle update form -->
@@ -67,6 +84,17 @@
                 <!-- form to update todo -->
                 <div class="collapse" id="update-{{_id}}">
                   <br>
+                  <form class="form-inline update-todo">
+                    <div class="form-group">
+                      <input type="text" name="task" class="form-control" placeholder="Task" value="{{task}}">
+                    </div>
+                    <div class="form-group">
+                      <input type="text" name="description" class="form-control" placeholder="Description" value="{{description}}">
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-block btn-default" value="Update">
+                    </div>
+                  </form>
                   <form class="form-inline update-todo">
                     <div class="form-group">
                       <input type="text" name="search" class="form-control" placeholder="search" value="{{search}}">
