--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,12 @@
 h1 {
   margin-top: 40px;
+  border: 1px solid white;
+  max-width: 50%;
+  background-color: #7776AC;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 40px;
 }
+
 .pull-right a {
   color: #000;
   cursor: pointer;
@@ -11,4 +17,33 @@ h1 {
 .pull-right a:hover {
   color: #000;
   opacity: 0.5;
+}
+
+.well{
+	background: rgba(235,233,249,1);
+	background: -moz-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(235,233,249,1)), color-stop(51%, rgba(101,89,156,1)), color-stop(100%, rgba(193,191,234,1)));
+	background: -webkit-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -o-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -ms-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: linear-gradient(to right, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebe9f9', endColorstr='#c1bfea', GradientType=1 );
+	color:white;
+}
+
+.list-group-item{
+	background: rgba(235,233,249,1);
+	background: -moz-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(235,233,249,1)), color-stop(51%, rgba(101,89,156,1)), color-stop(100%, rgba(193,191,234,1)));
+	background: -webkit-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -o-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: -ms-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	background: linear-gradient(to right, rgba(235,233,249,1) 0%, rgba(101,89,156,1) 51%, rgba(193,191,234,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebe9f9', endColorstr='#c1bfea', GradientType=1 );
+	color:white;
+}
+
+
+body{
+	background-color: #77A;
 }
