--- a/views/search.html
+++ b/views/search.html
@@ -13,7 +13,7 @@
   <!-- custom styles -->
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 
-  <title>Express To Do App</title>
+  <title> To Do List!</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
   <div class="well">
     <div class="container">
       <div class="page-header">
-        <h1>To Do <small>get it done!</small></h1>
+        <h1> To Do <small>Search</small></h1>
       </div>
     </div>
   </div>
@@ -32,15 +32,12 @@
       <div class="col-md-12">
         
         <!-- new todo form-->
-        <form class="form-inline" id="create-todo">
+        <form class="form-inline" id="search">
           <div class="form-group">
-            <input type="text" name="task" class="form-control" placeholder="Task" autofocus>
+            <input type="text" name="q" class="form-control" placeholder="Search Here" autofocus>
           </div>
           <div class="form-group">
-            <input type="text" name="description" class="form-control" placeholder="Description">
-          </div>
-          <div class="form-group">
-            <input type="submit" class="btn btn-default" value="Add To Do">
+            <input type="submit" class="btn btn-default" value="Search">
           </div>
         </form>
         <br>
