--- a/views/search.html
+++ b/views/search.html
@@ -20,7 +20,7 @@
   <div class="well">
     <div class="container">
       <div class="page-header">
-        <h1>To Do <small>get it done!</small></h1>
+        <h1>To Do <small>get it search!</small></h1>
       </div>
     </div>
   </div>
@@ -31,15 +31,12 @@
       <div class="col-md-12">
 
         <!-- new todo form-->
-        <form class="form-inline" id="create-todo">
+        <form class="form-inline" id="search-todo">
           <div class="form-group">
-            <input type="text" name="task" class="form-control" placeholder="Task" autofocus>
+            <input type="text" name="q" class="form-control" placeholder="Search" autofocus>
           </div>
           <div class="form-group">
-            <input type="text" name="description" class="form-control" placeholder="Description">
-          </div>
-          <div class="form-group">
-            <input type="submit" class="btn btn-default" value="Add To Do">
+            <input type="submit" class="btn btn-default" value="Search">
           </div>
         </form>
         <br>
